--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Thus the three arguments are assigned to the triad of <a href="http://en.wikiped
 <li><a href="http://d.hatena.ne.jp/youz/20121224/1356365175" target="_blank">Scheme</a></li>
 <li><a href="http://homepage1.nifty.com/~skz/Entry/music.html" target="_blank">Scheme</a></li>
 <li><a href="https://gist.github.com/kawabata/1371488" target="_blank">Clojure</a></li>
+<li><a href="http://ideone.com/CYaAs" target="_blank">Python</a></li>
 <li><a href="http://d.hatena.ne.jp/aike/20120723" target="_blank">SuperCollider</a></li>
 <li><a href="http://jsdo.it/taninsw/fFpc" target="_blank">JavaScript</a></li>
 </ul>
