add link to github

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 It automatically generates a complex and very long music from a simple formula.</p>
 
 <h2>Example</h2>
-<p>The following is an implementation of tarai function music written in JavaScript.</p>
+<p>The following is an implementation of tarai function music written in JavaScript. <a href="https://github.com/aike/tarai_language" target="_blank">[source code]</a></p>
 
 	<div class="indent">
 	<span id="formula">
