--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<title>Tarai Function Music</title>
-	<link href="http://kevinburke.bitbucket.org/markdowncss/markdown.css" rel="stylesheet"></link>
+	<link href="markdown.css" rel="stylesheet"></link>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.socialbutton-1.8.1.js"></script>
 	<script type="text/javascript" src="socialbutton.js"></script>
@@ -24,7 +25,7 @@
 		.block div { margin: 40px 2px 40px 2px; float: left; }
 	</style>
 </head>
-<body>
+<body style="background:#eee;">
 
 <h1>Tarai Function Music</h1>
 <p>May 2, 2013 by <a href="https://twitter.com/aike1000" target="_blank">aike</a>
@@ -80,11 +81,10 @@ Thus the three arguments are assigned to the triad of <a href="http://en.wikiped
 <ul class="indent">
 <li><a href="http://d.hatena.ne.jp/sumim/20111112/p1" target="_blank">Smalltalk</a></li>
 <li><a href="http://d.hatena.ne.jp/youz/20121224/1356365175" target="_blank">Scheme</a></li>
-<li><a href="http://homepage1.nifty.com/~skz/Entry/music.html" target="_blank">Scheme</a></li>
 <li><a href="https://gist.github.com/kawabata/1371488" target="_blank">Clojure</a></li>
-<li><a href="http://ideone.com/CYaAs" target="_blank">Python</a></li>
 <li><a href="http://d.hatena.ne.jp/aike/20120723" target="_blank">SuperCollider</a></li>
-<li><a href="http://jsdo.it/taninsw/fFpc" target="_blank">JavaScript</a></li>
+<li><a href="http://www2.tokai.or.jp/mrnkmzu/lab/tfmusic.html" target="_blank">ActionScript</a></li>
+<li><a href="https://qiita.com/sym_num/items/3b7317a8a8aa83e21ee3" target="_blank">Lisp</a></li>
 </ul>
 
 
