change to https

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Tarai Function Music</title>
 	<link href="markdown.css" rel="stylesheet"></link>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.socialbutton-1.8.1.js"></script>
 	<script type="text/javascript" src="socialbutton.js"></script>
 
@@ -74,23 +74,23 @@ Thus the three arguments are assigned to the triad of <a href="http://en.wikiped
 
 <h2>Resources</h2>
 <h3>YouTube and Soundcloud</h3>
-<iframe width="560" height="315" src="http://www.youtube.com/embed/4qsxTV3sg-g" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4qsxTV3sg-g" frameborder="0" allowfullscreen></iframe>
 <iframe width="560" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F59662186"></iframe>
 
 <h3>Other Implementations of Tarai Function Music</h3>
 <ul class="indent">
-<li><a href="http://d.hatena.ne.jp/sumim/20111112/p1" target="_blank">Smalltalk</a></li>
-<li><a href="http://d.hatena.ne.jp/youz/20121224/1356365175" target="_blank">Scheme</a></li>
+<li><a href="https://d.hatena.ne.jp/sumim/20111112/p1" target="_blank">Smalltalk</a></li>
+<li><a href="https://d.hatena.ne.jp/youz/20121224/1356365175" target="_blank">Scheme</a></li>
 <li><a href="https://gist.github.com/kawabata/1371488" target="_blank">Clojure</a></li>
-<li><a href="http://d.hatena.ne.jp/aike/20120723" target="_blank">SuperCollider</a></li>
+<li><a href="https://d.hatena.ne.jp/aike/20120723" target="_blank">SuperCollider</a></li>
 <li><a href="http://www2.tokai.or.jp/mrnkmzu/lab/tfmusic.html" target="_blank">ActionScript</a></li>
 <li><a href="https://qiita.com/sym_num/items/3b7317a8a8aa83e21ee3" target="_blank">Lisp</a></li>
+<li><a href="https://github.com/aike/20000YearsOrgel" target="_blank">Python + Pd</a></li>
 </ul>
 
 
 <div class="block clearfix">
 	<div id="twitter"></div>
-	<div id="gplus1"></div>
 	<div id="facebook"></div>
 	<div id="hatena"></div>
 </div>
